add a new merged PR

--- a/Proposal/aboutauthor.tex
+++ b/Proposal/aboutauthor.tex
@@ -10,17 +10,18 @@ I learned \langjulia in Aug 2018 and become a contributor to \langjulia communit
 
 I started to use \langmatlab to research image processing at the end of 2016, met  \langjulia after its \version{1.0} announcement, and learned \langpython during the Spring Festival of 2019. \par
 
-Although my programming career is less than three years, however, I think I'm qualified to achieve the project expectations for the non-trivial contributions I've done to the \langjulia{} community:
+Although my programming career is less than three years, however, I think I'm qualified to achieve the project expectations for the contributions I've done to the \langjulia{} community\footnote{All these are non-trivial and merged PRs.}:
 
 \begin{itemize}
-    \item PR(merged): \pullrequest{\julialang}{julia}{29626} reviewed by \mbauman;
-    \item PR(merged): \pullrequest{\fluxml}{\flux}{372} reviewed by \mikeinnes;
-    \item PR(merged): \pullrequest{\fluxml}{\flux}{371} reviewed by \mikeinnes;
-    \item PR(merged): \pullrequest{\juliaimages}{\imagetransformations}{58} reviewed by \evizero and \timholy;
-    \item PR(merged): \pullrequest{\juliaimages}{\imagetransformations}{59} reviewed by \evizero and \timholy;
-    \item PR(merged): \pullrequest{\juliaimages}{\imagedistance}{8} reviewed by \julio;
-    \item PR(merged): \pullrequest{\juliaimages}{\testimages}{35} reviewed by \timholy;
-    \item PR(rejected because of license issue): \pullrequest{\juliaimages}{\imagefiltering}{81} reviewed by \timholy;
+    \item PR: \pullrequest{\julialang}{julia}{29626} reviewed by \mbauman;
+    \item PR: \pullrequest{\juliaimages}{\imagetransformations}{58} reviewed by \evizero and \timholy;
+    \item PR: \pullrequest{\juliaimages}{\imagetransformations}{59} reviewed by \evizero and \timholy;
+    \item PR: \pullrequest{\juliaimages}{\imagedistance}{8} reviewed by \julio;
+    \item PR: \pullrequest{\juliaimages}{\imagesgithubio}{50} reviewed by \evizero;
+    \item PR: \pullrequest{\juliaimages}{\testimages}{35} reviewed by \timholy;
+    % \item PR: \pullrequest{\fluxml}{\flux}{710} reviewed by \mikeinnes;
+    \item PR: \pullrequest{\fluxml}{\flux}{372} reviewed by \mikeinnes;
+    \item PR: \pullrequest{\fluxml}{\flux}{371} reviewed by \mikeinnes;
 \end{itemize}
 to members in the lab of my supervisor and students in the university:
 \begin{itemize}
@@ -32,7 +33,7 @@ to members in the lab of my supervisor and students in the university:
 
 The following is an informal self-evaluation to let you have a more structural overview of my skill:
 \begin{itemize}
-    \item \textbf{Mathematics \& Image Processing (8/10)}: my current research is on image denoising based on hybrid method of variational model and deep learning;
+    \item \textbf{Mathematics \& Image Processing (8/10)}: my current research is on image denoising using variational model and deep learning;
     \item \textbf{Linux (7/10)}: heavy usage of docker, bash, git and vim in my daily work to maintain the servers;
     \item \textbf{Matlab (8/10)}: the only programming language used throughout my early-stage of research;
     \item \textbf{Julia (7/10)}: fully understand and stick to the philosophy of \langjulia, but lack of real project experience;
