add two PRs and one issue

--- a/Proposal/project.tex
+++ b/Proposal/project.tex
@@ -25,6 +25,7 @@ Fortunately the problem is well-concerned in the community. Issues such as
     \item \issue{\juliaimages}{\images}{766} -- Use \mintinline{julia}{channelview} as possible as we can?
     \item \issue{\juliaimages}{\images}{767} -- Towards consistent style, part 1: a naming guide
     \item \issue{\juliaimages}{\images}{772} -- Revisiting the Images API
+    \item \issue{\juliaimages}{\images}{790} -- Towards consistent style, part 1: a documentation guide
     \item \issue{zygmuntszpak}{\imagebinarization}{23} -- What's the appropriate argument order?
     \item \issue{zygmuntszpak}{\imagebinarization}{24} -- Export limited number of symbols?
 \end{itemize}
