add thanks to tim and evizero

--- a/Proposal/aboutauthor.tex
+++ b/Proposal/aboutauthor.tex
@@ -19,7 +19,7 @@ Although my programming career is less than three years, however, I think I'm qu
     \item PR: \pullrequest{\juliaimages}{\imagedistance}{8} reviewed by \julio;
     \item PR: \pullrequest{\juliaimages}{\imagesgithubio}{50} reviewed by \evizero;
     \item PR: \pullrequest{\juliaimages}{\testimages}{35} reviewed by \timholy;
-    \item PR(Pending): \pullrequest{zygmuntszpak}{\imagebinarization}{25} reviewed by \zygmunt;
+    \item PR(Pending): \pullrequest{zygmuntszpak}{\imagebinarization}{25};
     \item PR(Pending): \pullrequest{\fluxml}{\flux}{710} reviewed by \mikeinnes;
     \item PR: \pullrequest{\fluxml}{\flux}{372} reviewed by \mikeinnes;
     \item PR: \pullrequest{\fluxml}{\flux}{371} reviewed by \mikeinnes;
