--- a/Proposal/dilivery.tex
+++ b/Proposal/dilivery.tex
@@ -39,7 +39,7 @@ From weeks 6 to 9, RFC drafting\footnote{A \href{https://github.com/tensorflow/c
     \item \textbf{RFC Review:} if there's an issue with any item in the proposed RFC, suspend the related items and go back to the discussion workflow until a decision is made.
     \item \textbf{RFC Approval and Announcement:} After approval of RFCs, they are merged to \repoimagesgithubio{} as records and announced to the community via slack and discourse. RFC merge and announcement only happen in the last two weeks in case there're more items to be added.
 \end{enumerate}
-RFC details on how the codebase is pruned is described in \cref{subsec:prune}.
+RFC details on how the codebase is pruned are described in \cref{subsec:prune}.
 
 \subsubsection*{Stage Evaluation}
 
