--- a/Proposal/project.tex
+++ b/Proposal/project.tex
@@ -33,7 +33,7 @@ discuss the coding styles and programming practice in the most generic way. Pack
 \mint{julia}{binarize(::BinarizationAlgorithm, ::AbstractArray{T,2}) where {T}}
 
 \subsection*{Project Expectation}
-With these existing work, it's in the right time to revisit the whole \images{} ecosystem and head towards a more easy-to-use \images{} package. This project aims to solve this problem by:
+With these existing work, it's in the right time to revisit the whole \images{} ecosystem and head towards a more easy-to-use \images{} package, and more ambitiously, towards \images{} \version{1.0}. This project aims to solve this problem by:
 \begin{enumerate}
     \item providing more comprehensive and integrated documentation on both style guide and ecosystem illustration, and drafting RFCs
     \item pruning codebase of the ecosystem according to the drafted RFCs
