remove pending PRs

--- a/Proposal/aboutauthor.tex
+++ b/Proposal/aboutauthor.tex
@@ -13,14 +13,15 @@ I started to use \langmatlab to research image processing at the end of 2016, me
 Although my programming career is less than three years, however, I think I'm qualified to achieve the project expectations for the contributions I've done to the \langjulia{} community\footnote{All these are non-trivial and merged PRs.}:
 
 \begin{itemize}
+    \item Contributions to \textsf{\juliaimages}: 25\% Pull requests, 47\% issues, 19\% commits and 9\% code reviews;
     \item PR: \pullrequest{\julialang}{julia}{29626} reviewed by \mbauman;
     \item PR: \pullrequest{\juliaimages}{\imagetransformations}{58} reviewed by \evizero and \timholy;
     \item PR: \pullrequest{\juliaimages}{\imagetransformations}{59} reviewed by \evizero and \timholy;
     \item PR: \pullrequest{\juliaimages}{\imagedistance}{8} reviewed by \julio;
     \item PR: \pullrequest{\juliaimages}{\imagesgithubio}{50} reviewed by \evizero;
     \item PR: \pullrequest{\juliaimages}{\testimages}{35} reviewed by \timholy;
-    \item PR(Pending): \pullrequest{zygmuntszpak}{\imagebinarization}{25};
-    \item PR(Pending): \pullrequest{\fluxml}{\flux}{710} reviewed by \mikeinnes;
+    % \item PR(Pending): \pullrequest{zygmuntszpak}{\imagebinarization}{25};
+    % \item PR(Pending): \pullrequest{\fluxml}{\flux}{710} reviewed by \mikeinnes;
     \item PR: \pullrequest{\fluxml}{\flux}{372} reviewed by \mikeinnes;
     \item PR: \pullrequest{\fluxml}{\flux}{371} reviewed by \mikeinnes;
 \end{itemize}
