--- a/Proposal/aboutauthor.tex
+++ b/Proposal/aboutauthor.tex
@@ -2,44 +2,90 @@
 
 \section{About the Author}\label{sec:about_author}
 
-My name is \textsf{Jiuning Chen}, a third-year student in the School of Mathematical Sciences, East China Normal University, Shanghai. I'm currently doing research related to image processing, computer vision, convex optimization, and machine learning.\par
+My name is \textsf{Jiuning Chen}, a third-year student in the School of Mathematical Sciences, East China Normal University, Shanghai. I'm currently doing research related to image processing, computer vision, convex optimization, and machine learning. It's worth noting that I got my bachelor's degree as a philosophy student, this experience makes me a good candidate to think about the future of \images{} ecosystem from a more generic and broader view -- I have good feelings about what needs improvement and what doesn't.\par
 
-I learned \langjulia in Aug 2018 and become a contributor to \langjulia community since Oct 2018, and plan to make more contributions in this community. 40+ hours per week can be guaranteed on this project since there's no other internship or vacation plan this summer.\par
+50+ hours per week can be guaranteed on this project since there's no other internship or vacation plan this summer. After GSoC, at least 20+ hours per week can be guaranteed to continue the long-term \images{} \version{1.0} project since I've passed the Ph.D. candidate examination in ECNU -- no compulsory work in the first academic year. \par
 
-\subsection*{Programming Background}
+I learned \langjulia in Aug 2018 and become a contributor to \langjulia community since Oct 2018, and plan to make more contributions as a member of this community. Currently I'm one of the developers in \repoimagesgithubio{}.
 
-I started to use \langmatlab to research image processing at the end of 2016, met  \langjulia after its \version{1.0} announcement, and learned \langpython during the Spring Festival of 2019. \par
+\subsection*{Contribution to the community}
+My main interest is to improve the \images, in the meantime, there are some small patches to \flux{} and \textsf{julia}. The major part of my contribution to \textsf{\juliaimages} is on issues: 25\% pull requests, 47\% issues, 19\% commits, 9\% code reviews. This is because I don't think \images{} is at its good status for new features until we pull this GSoC project off.
 
-Although my programming career is less than three years, however, I think I'm qualified to achieve the project expectations for the contributions I've done to the \langjulia{} community\footnote{All these are non-trivial and merged PRs.}:
-
+My previous PRs can help proving that I'm qualified to make progress on this project. Unless explicitly noted, all following PRs are non-trivial and merged.
 \begin{itemize}
-    \item Contributions to \textsf{\juliaimages}: 25\% Pull requests, 47\% issues, 19\% commits and 9\% code reviews;
-    \item PR: \pullrequest{\julialang}{julia}{29626} reviewed by \mbauman;
-    \item PR: \pullrequest{\juliaimages}{\imagetransformations}{58} reviewed by \evizero and \timholy;
-    \item PR: \pullrequest{\juliaimages}{\imagetransformations}{59} reviewed by \evizero and \timholy;
-    \item PR: \pullrequest{\juliaimages}{\imagedistance}{8} reviewed by \julio;
-    \item PR: \pullrequest{\juliaimages}{\imagesgithubio}{50} reviewed by \evizero;
-    \item PR: \pullrequest{\juliaimages}{\testimages}{35} reviewed by \timholy;
-    % \item PR(Pending): \pullrequest{zygmuntszpak}{\imagebinarization}{25};
-    % \item PR(Pending): \pullrequest{\fluxml}{\flux}{710} reviewed by \mikeinnes;
-    \item PR: \pullrequest{\fluxml}{\flux}{372} reviewed by \mikeinnes;
-    \item PR: \pullrequest{\fluxml}{\flux}{371} reviewed by \mikeinnes;
-\end{itemize}
-to members in the lab of my supervisor and students in the university:
-\begin{itemize}
-    \item Independently set up the whole self-hosted research platform from scratch for my supervisor's laboratory;
-    \item \textit{De facto} maintainer of the deep learning servers of the School of Mathematical Sciences, and that of a laboratory in Computer Sciences Department;
-    \item Proudly create and maintain the homepage of my supervisor, prof. \href{http://math.ecnu.edu.cn/~fli/}{\textsf{Fang Li}};
-    \item Head teaching assistant of courses of ``\href{http://math.ecnu.edu.cn/~fli/Teaching/DeepLearning/Fall2018/index.html}{Deep Learning and Action (Fall 2018)}''  and ``\href{http://math.ecnu.edu.cn/~fli/Teaching/DigitalImageProcessing/Spring2019/index.html}{Digital Image Processing (Spring 2019)}''.
+    \item Enhancement: \pullrequest{\julialang}{julia}{29626}\footnote{I only learned \langjulia{} for two months at that moment -- a proof of my good understanding on julia}\\
+      {\small
+      Support \mintinline{julia}{repeat} at any dimension as an enhancement\\
+      reviewed by \mbauman
+      }
+    \item Feature: \pullrequest{\juliaimages}{\imagetransformations}{58}\\
+      {\small
+      Implement a robust \mintinline{julia}{imrotate} function\\
+      reviewed by \evizero and \timholy
+      }
+    \item Enhancement: \pullrequest{\juliaimages}{\imagetransformations}{59}\\
+      {\small
+      Enhance \mintinline{julia}{imresize} with more delicate dispatch design\\
+      reviewed by \evizero and \timholy
+      }
+    \item Patch: \pullrequest{\juliaimages}{\imagedistance}{8}\\
+      {\small
+      fix a module design bug caused by misunderstanding of method overriding\\
+      reviewed by \julio
+      }
+    \item Patch: \pullrequest{\juliaimages}{\imagesgithubio}{50} \\
+      {\small
+      fix the paralyzed autodeploy problem\\
+      reviewed by \evizero
+      }
+    \item Documentation: \pullrequest{\juliaimages}{\testimages}{35}\\
+      {\small
+      add docstring to \mintinline{julia}{testimage}, the only exported function\\
+      reviewed by \timholy
+      }
+    \item Documentation(RFC, pending): \pullrequest{zygmuntszpak}{\imagebinarization}{25}\\
+      {\small
+      redesign the docstring structure of all codes in \imagebinarization\\
+      this PR serves as a first attempt to \issue{\juliaimages}{\images}{790} -- Towards consistent style, part 2: a documentation guide\\
+      not yet reviewed because all active maintainers are busy lately
+      }
+    \item Patch(pending): \pullrequest{\fluxml}{\flux}{710}\\
+      {\small
+      reimplement \mintinline{julia}{activations} to replace the current broken one\\
+      reviewed by \mikeinnes
+      }
+    \item Patch: \pullrequest{\fluxml}{\flux}{372}\\
+      {\small
+      restrict argument type of \mintinline{julia}{Dense}, initialize test cases for \mintinline{julia}{layers/basic.jl}\\
+      this PR is quite trivial but necessary\\
+      reviewed by \mikeinnes
+      }
+    \item Patch: \pullrequest{\fluxml}{\flux}{371}\\
+      {\small
+      add support for \textsf{$\approx$} and fix dispatch bug on \textsf{$==$} \\
+      reviewed by \mikeinnes
+      }
 \end{itemize}
 
-The following is an informal self-evaluation to let you have a more structural overview of my skill:
+\subsection*{Other Experiences}
+  \begin{itemize}
+      \item Independently set up the whole self-hosted research platform from scratch for my supervisor's laboratory\\
+        {\small
+        5000 lines of markdown documentation is written by myself.
+        }
+      \item \textit{De facto} maintainer of the deep learning servers of the School of Mathematical Sciences, and that of a laboratory in Computer Sciences Department;
+      \item Proudly created and maintained the \href{http://math.ecnu.edu.cn/~fli/}{homepage} of my supervisor.
+      \item Head teaching assistant of courses: ``\href{http://math.ecnu.edu.cn/~fli/Teaching/DeepLearning/Fall2018/index.html}{Deep Learning and Action (Fall 2018)}''  and ``\href{http://math.ecnu.edu.cn/~fli/Teaching/DigitalImageProcessing/Spring2019/index.html}{Digital Image Processing (Spring 2019)}''.
+  \end{itemize}
+
+
+\subsection*{Self Evaluation}
 \begin{itemize}
     \item \textbf{Mathematics \& Image Processing (8/10)}: my current research is on image denoising using variational model and deep learning;
     \item \textbf{Linux (7/10)}: heavy usage of docker, bash, git and vim in my daily work to maintain the servers;
     \item \textbf{Matlab (8/10)}: the only programming language used throughout my early-stage of research;
-    \item \textbf{Julia (7/10)}: fully understand and stick to the philosophy of \langjulia, but lack of real project experience;
-    \item \textbf{Related packages (6/10)}: familiar with other image-processing packages but haven't dig into the source code of them yet;
+    \item \textbf{Julia (7/10)}: fully understand and stick to the philosophy of \langjulia, but lack of real and large project experience;
+    \item \textbf{Related packages (6/10)}: familiar with other image-processing packages but haven't dig into the source code of them yet.
 \end{itemize}
 
 \subsection*{Education Background}
