--- a/Proposal/dilivery.tex
+++ b/Proposal/dilivery.tex
@@ -2,7 +2,7 @@
 
 \section{Delivery Schedule}\label{sec:delivery}
 
-This project is delivered in two stages: \textbf{documenting} and \textbf{pruning}. Documenting and recording in the first stage serves as the preparation for the second stage's pruning work of \images{} ecosystem.\par
+This project is delivered in two stages: \textbf{documenting} and \textbf{pruning}. Documenting and recording in the first stage serves as the preparation for the second stage's pruning work of \images{} ecosystem. The existence of pruning stage is to minimize the impact of large amount of backward incompatible API changes, which means backward compatible PRs can happen at any stage. \par
 
 Concerning the GSoC timeline, documenting stage begins from \date{April 22}\footnote{Although the coding officially begins from \date{May 27}, the author will start this project as soon as he's available.} to \date{June 24} (weeks 1-10), and the pruning stage starts from \date{July 1} to \date{August 26} (weeks 12-22). Week 11 serves as a buffer week. \textsf{Phase 1} evaluates the documenting stage, and \textsf{Phase 2} and \textsf{Final} evaluates the pruning stage.
 
@@ -22,7 +22,7 @@ The discussion period begins from \date{April 22} to \date{June 9} (weeks 1 to 7
 
 In the beginning of the descussion period, an ecosystem documentation be add to \repoimagesgithubio{} as soon as possible to reach a consensus on the future of \images{}, this consensus shall serve as the fundamental principle to all future discussion and development. Ideally, the current \images{} maintainer, i.e., \timholy, is supposed to participate in.\footnote{In case of maintainer being busy on other work, the author will draft a document based on his understanding and post it to the maintainer to get a feedback.}\par
 
-The RFC drafting period begins from \date{May 27} to \date{June 23} (weeks 6 to 9). Based on previous discussions, one or more RFCs are drafted and discussed in this period. The last week of this stage is used for evaluation, merging, and announcement of RFCs.\par
+The RFC drafting period begins from \date{May 27} to \date{June 23} (weeks 6 to 9)\footnote{This doesn't mean RFCs can't be drafted before \date{May 27}.}. Based on previous discussions, one or more RFCs are drafted and discussed in this period. The last week of this stage is used for evaluation, merging, and announcement of RFCs.\par
 
 From weeks 1 to 7, many discussions happen simultaneously in the following way:
 \begin{enumerate}
@@ -45,9 +45,9 @@ RFC details on how the codebase is pruned are described in \cref{subsec:prune}.
 
 Four items are evaluated at the end of this stage, i.e., \textsf{Phase 1 Evaluation}:
 \begin{itemize}
-    \item 2/10: activity on issues and discussions
+    \item 3/10: activity on issues and discussions
     \item 2/10: ecosystem documentation
-    \item 3/10: developer manual
+    \item 2/10: developer manual
     \item 3/10: RFCs
 \end{itemize}
 A score of 6/10 stands for \textsf{Evaluation Pass}.
