--- a/Proposal/main.tex
+++ b/Proposal/main.tex
@@ -38,7 +38,7 @@ Mentors\footnote{Except for Dr. Zygmunt, my primary mentor, I listed other mento
 
 \begin{abstract}
     \normalsize
-    This project aims to achieve a better ecosystem for \href{https://juliaimages.org/latest/}{\images}, an image-processing toolbox in \href{https://julialang.org/}{\langjulia}. Main contributions consist of user-friendly documentation of \images{} ecosystem, developer manual, and more consistent, robust, and extensible APIs. Moreover, this project also serves as a subproject to \images{} \version{1.0} milestone.
+    This project aims to achieve a better ecosystem for \href{https://juliaimages.org/latest/}{\images}, an image-processing toolbox in \href{https://julialang.org/}{\langjulia}. Main contributions consist of user-friendly documentation of \images{} ecosystem, developer manual, and more consistent, robust, and extensible APIs. Moreover, this project also serves as a subproject to bring \images{} from pre-julia1.0 stage to post-julia1.0 stage, and eventually to \images{} \version{1.0}.
 \end{abstract}
 
 % \noindent The author, who began his contribution to \images{} since \date{Aug 2018}, is currently a third-year graduate student in the School of Mathematical Sciences, East China Normal University, Shanghai. His current research interests are image processing and computer vision, convex optimization, and machine learning. More information about him is listed in \cref{sec:about_author}.\par
