add dependency graph of images

--- a/Proposal/aboutauthor.tex
+++ b/Proposal/aboutauthor.tex
@@ -74,13 +74,14 @@ I've also authored some related issues:
   \item \issue{\juliaimages}{\imagedistance}{7} -- Redesign the type hierarchy
   \item \issue{\juliaimages}{\images}{766} -- Use \mintinline{julia}{channelview} as possible as we can?
   \item \issue{\juliaimages}{\images}{765} -- Move \mintinline{julia}{difftype} to \imagecore
+  \item \issue{\juliaimages}{\images}{792} -- reduce \images{} dependency complexity
 \end{itemize}
 
 \subsection*{Other Experiences}
   \begin{itemize}
       \item Independently set up the whole self-hosted research platform from scratch for my supervisor's laboratory\\
         {\small
-        5000 lines of markdown documentation is written by myself.
+        5000 lines of markdown user\&admin documentation is written by myself.
         }
       \item \textit{De facto} maintainer of the deep learning servers of the School of Mathematical Sciences, and that of a laboratory in Computer Sciences Department;
       \item Proudly created and maintained the \href{http://math.ecnu.edu.cn/~fli/}{homepage} of my supervisor.
