update involved packages

--- a/Proposal/project.tex
+++ b/Proposal/project.tex
@@ -51,8 +51,8 @@ Writing tutorials and demos of \images{} is not included in this project since i
 This is a project on documentation and code refactoring to provide more consistent, robust and extensive APIs to both users and developers, and this is also a sub-project to \images{} \sname{v1.0} milestone. Potentially involved packages are:
 \begin{itemize}
     \item \textbf{user entrance:} \repoimages
-    \item \textbf{core packages:} \repoimagecore, \repoimageaxes and \repoimagemetadata
-    \item \textbf{application packages:} \repoimagemorphology, \repoimagetransformations, \repoimagedistance and \repoimagefiltering
+    \item \textbf{core packages:} \repoimagecore, \repoimageaxes
+    \item \textbf{application packages:} \repoimagemorphology, \repoimagetransformations, \repoimagedistance \repoimagemetadata and \repoimagefiltering
     \item \textbf{new packages\footnote{These packages are not yet imported by \images.}:} \repoimagebinarization, \repohistogramthresholding, \repoimageinpainting
 \end{itemize}
 Computer-vision packages (e.g., \repoimagetracking) and plotting packages (e.g., \repoimageview) are not under consideration of this project.\par
