fix minor typos

--- a/Proposal/aboutauthor.tex
+++ b/Proposal/aboutauthor.tex
@@ -36,7 +36,7 @@ My previous PRs can help proving that I'm qualified to make progress on this pro
       }
     \item Patch: \pullrequest{\juliaimages}{\imagesgithubio}{50} \\
       {\small
-      fix the paralyzed autodeploy problem\\
+      fix the paralyzed autodeployment \\
       reviewed by \evizero
       }
     \item Documentation: \pullrequest{\juliaimages}{\testimages}{35}\\
