--- a/Proposal/main.tex
+++ b/Proposal/main.tex
@@ -30,7 +30,7 @@
 
 \title{\huge Towards Better Images.jl Ecosystem}
 \author{Jiuning Chen\mailto{johnnychen94@hotmail.com}}
-\affil{Github: \href{https://github.com/johnnychen94}{Johnnychen94} \quad Slack: Johnny Chen\\
+\affil{Github: \href{https://github.com/johnnychen94}{Johnnychen94}\\
 Mentors\footnote{Except for Dr. Zygmunt, my primary mentor, I listed other mentors according to the chronological order of their acceptance of mentoring this project. Special thanks to Prof. Tim and Mr. Christof (aka evizero), their patient guidance to my several beginning PRs in \langjulia{} community are invaluable.}: \zygmunt, \julio, \timholy, \evizero}
 \date{}
 
